# osu_reader

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: c-cpp.yml
include/osu_reader/: beatmap.h  beatmap_file.h  beatmap_parser.h  beatmap_util.h  binary_reader.h  binary_reader_interface.h  gamemode.h  hitobject.h  hitobject_iterator.h  parse_string.h  replay.h  replay_reader.h  sliderpath.h  string_stuff.h  vector2.h
src/: beatmap.cpp  beatmap_parser.cpp  beatmap_parser.h  binary_reader.h  parse_hitobject.cpp  parse_string.h  python_bindings.cpp  replay.cpp  replay_reader.cpp  replay_reader.h  sliderpath.cpp  sliderpath.h  string_stuff.cpp  string_stuff.h  timingpoints_helper.h  util.h
src/hitobject/: bezier.cpp  bezier.h  catmull.cpp  catmull.h  parse_hitobject.cpp  parse_hitobject.h  perfect_circle.cpp  perfect_circle.h  sliderpath.cpp  sliderpath.h
tests/: CMakeLists.txt  python_bindings_test.py  python_bindings_tests.py
tests/curve_vis/: CMakeLists.txt
tests/curve_vis/src/: glad.cpp  main.cpp
tests/curve_vis/src/glad/: glad.h
tests/res/: A.SAKA - Nanatsu Koyoto (ailv) [Extra].osu  An - Necro Fantasia-An remix- (captin1) [Normal].osu  Buta-Otome - Kakoi-naki Yo wa Ichigo no Tsukikage (BarkingMadDog) [this map is so bad cuz overmapping].osu  cptnXn - xi - FREEDOM DiVE [FOUR DIMENSIONS] (2014-05-11) Osu.osr
tests/src/: Kakoi-naki.cpp  Nanatsu_Koyoto.cpp  beatmap_Kakoi-naki.cpp  beatmap_Nanatsu_Koyoto.cpp  beatmap_hitobj_it.cpp  beatmap_util.cpp  cptnXn_fdfd.cpp  file_formats.cpp  file_string.h  main.cpp  no_beatmap.cpp  parse_all.cpp  parser_properties.cpp  replay_cptnXn_fdfd.cpp  replay_util.cpp  slider_parsing.cpp  string_stuff.cpp  timingpoints.cpp
